tests/NormalTests/paczka1/fuzzy1/39416397.err
Error in line 2: K99hZJPA1Ud A11 76,1
Error in line 8: S425 A11 20,6
Error in line 24: S425 S425 281,8
Error in line 35: s9jvxDj0K A11 80,2
